2008-09-06  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_get_result_count_elements): added pattern for new motors layout
	(_result_count_pattern): match commas in result count!
	(_parse_tree): delete commas from result_count

2008-08-10  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay/Stores.pm (_columns): fixed for new page layout?

2008-06-28  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (preprocess_results_page): use our own UserAgent to fetch the official eBay time (not a generic LWP::UserAgent)

2008-04-05    <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay/ES.pm (result_count_pattern): fixed

2008-02-25    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (user_agent_delay): new method

2008-02-24    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/Motors.pm (result_count_pattern): new methods

	* lib/WWW/Search/Ebay/FR.pm (title_pattern): new method

	* lib/WWW/Search/Ebay.pm (title_pattern): new method
	(result_count_regex): renamed method and made public

2007-12-05    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (_result_count_regex): allow one hit to match!

	* lib/WWW/Search/Ebay/IT.pm (_result_count_regex): fixed pattern

2007-12-02    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): ignore auctions from other countries

2007-08-20    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm: FIXED page title regex

2007-05-20    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/ES.pm (_result_count_regex): fixed result-count parsing

	* lib/WWW/Search/Ebay/DE.pm (_process_date_abbrevs): fixed date parsing

2007-01-29    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (result_as_HTML): now takes an optional date format argument

2007-01-26    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (result_as_HTML): added end-time to "ended" items

2006-12-24    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (result_as_HTML): added "add to myEbay" link

2006-09-03    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (whitespace_pattern): new method

	* lib/WWW/Search/Ebay/ES.pm: new backend
