@@ -1,6 +1,15 @@
 
 This is a backend for use with the WWW::Search module.
 
+NOTE   NOTE   NOTE   NOTE   NOTE
+
+STARTING WITH THE 3.001 DISTRIBUTION OF 2008-11-10, 
+WWW::Search::Ebay IS NOT ABLE TO FOLLOW THE "NEXT" LINK
+ON THE SEARCH RESULTS PAGE.  THEREFORE IT WILL NOT RETURN MORE
+THAN 200 RESULTS.
+
+====   ====   ====   ====   ====
+
 Please read the README for WWW::Search for general information.
 (One place to find it is
 http://www.perl.com/CPAN-local/modules/by-module/WWW/WWW-Search-2.45.readme
