@@ -1,3 +1,7 @@
+2008-11-09  Kingpin  <Martin@BLUEMAX>
+
+	* lib/WWW/Search/Ebay.pm (_parse_tree): fixed "infinite" looping of page requests
+
 2008-09-06  Kingpin  <Martin@BLUEMAX>
 
 	* lib/WWW/Search/Ebay.pm (_get_result_count_elements): added pattern for new motors layout
